RESOLVED FIXED197848
[iOS] Cannot scroll to beginning of document after scrolling to end of document and vice versa via key commands
https://bugs.webkit.org/show_bug.cgi?id=197848
Summary [iOS] Cannot scroll to beginning of document after scrolling to end of docume...
Daniel Bates
Reported 2019-05-13 12:03:29 PDT
Seen on iOS using a hardware keyboard. Steps to reproduce: 1. Visit <https://www.apple.com>. 2. Press Command + Down Arrow. 3. Press Command + Up Arrow. Then nothing happens, but the page should have been scrolled to the top.
Attachments
Patch and layout test (8.30 KB, patch)
2019-05-13 12:30 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2019-05-13 12:03:35 PDT
Following <rdar://problem/49523065>, UIKit does not emit a keyup event for a Command-modified key.
Daniel Bates
Comment 2 2019-05-13 12:03:42 PDT
Daniel Bates
Comment 3 2019-05-13 12:30:03 PDT
Created attachment 369760 [details] Patch and layout test
Brent Fulgham
Comment 4 2019-05-14 09:16:15 PDT
Comment on attachment 369760 [details] Patch and layout test The api-ios failures are due to dev environment problems. r=me
WebKit Commit Bot
Comment 5 2019-05-14 09:43:57 PDT
Comment on attachment 369760 [details] Patch and layout test Clearing flags on attachment: 369760 Committed r245285: <https://trac.webkit.org/changeset/245285>
WebKit Commit Bot
Comment 6 2019-05-14 09:43:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.